--- a/src/Web/Views/Home/Index.cshtml
+++ b/src/Web/Views/Home/Index.cshtml
@@ -2,93 +2,204 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how to build ASP.NET apps that can run anywhere.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
+<style>
+    .float{
+        position:fixed;
+        width:60px;
+        height:60px;
+        bottom:40px;
+        right:40px;
+        background-color:#c62828;
+        color:#FFF;
+        border-radius:50px;
+        text-align:center;
+        box-shadow: 2px 2px 3px #999;
+    }
+    
+    .float:hover {
+        color:#FFF;
+    }
+
+    .my-float{
+        margin-top: 15px;
+        font-size: 25px;
+    }
+</style>
+
+<div id="app">
+    <div class="layout-content">
+        <div class="layout-content-body">
+         
+            <div class="row ">
+                <div class="col-sm-12">
+                    <div class="row ">
+                        <div class=" col-md-12 text-center m-b">
+                            <h3 class="m-b-0">Today</h3>
+                            <small>Latest from 2018-20-10</small>
+                            <span class="col-md-12 m-t m-b">
+                                <i class="icon icon-circle"></i>
+                            </span>
+                    
+                        </div>
+                        <div class="col-md-6 col-md-offset-3" v-for="post in posts">
+                            <div class="card card_shadow">
+                                <div class="card-header">
+                                    <div class="col-md-12" style="padding-left:0px !important; padding-right:0px !important;">
+                       
+                                        <div class="col-md-6 col-sm-12" style="padding-left:0px !important; padding-right:0px !important;">
+                          
+                                            <i class="icon icon-map-marker"></i>
+                                            {{ post.location }}
+                          
+                                        </div>
+                                        <div class="col-md-6 col-sm-12" style="padding-left:0px !important; padding-right:0px !important;">
+                                            <span class="pull-right">
+                                                <i class="icon icon-clock-o"></i>
+                                                {{ post.created_at }} ({{ post.time_ago }})
+                                            </span>
+                                        </div>
+                                    </div>
+                      
+                        
+                        
+                                </div>
+                                <div class="card-image">
+                                    <img class="card-img-bottom img-responsive" v-bind:src="post.image" alt="Golden Gate Bridge, San Francisco">
+                                </div>
+                                <div class="card-body">
+                                    <h4 class="card-title ">
+                                        <a class="link-muted" href="#">{{ post.description }}</a>
+                                    </h4>
+                      
+                                </div>
+                            </div>
+                            <!-- <div class="card">
+                                <div class="card-header">
+                     
+                                </div>
+                    
+                            </div> -->
+                        </div>
+              
+                    </div>
+                </div>
+          
             </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    There are powerful new features in Visual Studio for building modern web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner3.svg" alt="Microsoft Azure" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
+         
         </div>
     </div>
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
+    
+    
+    <a href="#" data-toggle="modal" data-target="#addFireAlertModal"  class="float">
+    <i class="icon icon-fire my-float"></i>
     </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
+   
+    
+    <div id="addFireAlertModal" tabindex="-1" role="dialog" class="modal fade">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header bg-danger">
+            <button type="button" class="close" data-dismiss="modal">
+              <span aria-hidden="true">×</span>
+              <span class="sr-only">Close</span>
+            </button>
+            <h4 class="modal-title">By using the grid system, fields can have the desired size</h4>
+          </div>
+          <div class="modal-body">
+            <form class="form form-horizontal">
+                <div class="form-group">
+                    <label for="file">Choose Picture</label>
+                    <input type="file" class="form-control" id="image"/>
+                </div>
+                <div class="form-group">
+                    <label for="file">Type City And Country</label>
+                    <input type="text" id="image"/>
+                </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
 </div>
 
-<div class="row">
-    <div class="col-md-3">
-        <h2>Application uses</h2>
-        <ul>
-            <li>Sample pages using ASP.NET Core MVC</li>
-            <li>Theming using <a href="https://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>How to</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398600">Add a Controller and View</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699316">Use logging to log a message.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699317">Add packages using NuGet.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699319">Target development, staging or production environment.</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Overview</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Run &amp; Deploy</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a></li>
-        </ul>
-    </div>
-</div>
+@section Scripts
+{
+<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17/vue.js"></script>
+<!-- Firebase App is always required and must be first -->
+<script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-app.js"></script>
+
+<!-- Add additional services that you want to use -->
+@* <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-auth.js"></script> *@
+    <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-database.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-firestore.js"></script>
+@* <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-messaging.js"></script> *@
+@* <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-functions.js"></script> *@
+
+<!-- Comment out (or don't include) services that you don't want to use -->
+<!-- <script src="https://www.gstatic.com/firebasejs/5.5.5/firebase-storage.js"></script> -->
+
+<script>
+    
+    var Vue = new Vue({
+        el: '#app',
+        data: {
+          db: null ,
+          config: {
+              apiKey: "AIzaSyDhAx6mvMk9AVekWyQtPtiSyr6qkJadoNs",
+              authDomain: "nasa-app-challenge.firebaseapp.com",
+              databaseURL: "https://nasa-app-challenge.firebaseio.com",
+              projectId: "nasa-app-challenge",
+              storageBucket: "nasa-app-challenge.appspot.com",
+              messagingSenderId: "549310585067"
+          },
+          posts: []
+        },
+        methods: {
+            toDateTime: function(secs) {
+                var t = new Date(1970, 0, 1); // Epoch
+                t.setSeconds(secs);
+                return t;
+            },
+            addToFeed: function(postData) {
+                console.log(postData);
+                var createdDate = this.toDateTime(postData.created_at.seconds);
+                this.posts.unshift({
+                    description: postData.description,
+                    created_at: createdDate.toLocaleDateString(),
+                    time_ago: timeago().format(createdDate),
+                    image:postData.image,
+                    location: postData.location
+                });
+            }
+        },
+        mounted: function() {
+            
+
+            firebase.initializeApp(this.config);
+
+            this.db = firebase.firestore();
+            
+            // Disable deprecated features
+            this.db.settings({
+                timestampsInSnapshots: true
+            });
+            var self = this;
+           
+            
+            this.db.collection("posts")
+                .onSnapshot(function(querySnapshot) {
+                    querySnapshot.docChanges().forEach(function(change) {
+                        if (change.type === "added") {
+                            self.addToFeed(change.doc.data());
+                        } 
+                    });
+                    
+                });
+
+
+        }
+    });
+   
+</script>
+
+}
