--- a/src/Web/Views/Shared/_Layout.cshtml
+++ b/src/Web/Views/Shared/_Layout.cshtml
@@ -1,74 +1,119 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
+  
+<!-- Mirrored from demo.madebytilde.com/elephant-v1.4.0/theme-3/cards.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 07 Oct 2018 21:53:00 GMT -->
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Web</title>
-
-    <environment include="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-        <link rel="stylesheet" href="~/css/site.css" />
-    </environment>
-    <environment exclude="Development">
-        <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
-              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
-        <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
-    </environment>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Cards &middot; Elephant Template &middot; The fastest way to build Modern Admin APPS for any platform, browser, or device.</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
+  <meta name="description" content="Elephant is an admin template that helps you build modern Admin Applications, professionally fast! Built on top of Bootstrap, it includes a large collection of HTML, CSS and JS components that are simple to use and easy to customize.">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,400italic,500,700">
+  <link rel="stylesheet" href="/css/vendor.min.css">
+  <link rel="stylesheet" href="/css/elephant.min.css">
+  <link rel="stylesheet" href="/css/application.min.css">
+  <link rel="stylesheet" href="/css/demo.min.css">
+  <style>
+    .card_shadow{
+      -webkit-box-shadow: 0 5px 11px 0 rgba(0,0,0,.18),0 4px 15px 0 rgba(0,0,0,.15);
+      box-shadow: 0 5px 11px 0 rgba(0,0,0,.18),0 4px 15px 0 rgba(0,0,0,.15);
+    }
+  </style>
 </head>
-<body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Web</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <partial name="_CookieConsentPartial" />
-
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; 2018 - Web</p>
-        </footer>
+<body class="layout layout-header-fixed">
+<div class="layout-header">
+  <div class="navbar navbar-default">
+    <div class="navbar-header">
+      <a class="navbar-brand navbar-brand-center" href="index.html">
+        <img class="navbar-brand-logo" src="img/logo-inverse.svg" alt="Elephant">
+      </a>
+      <button class="navbar-toggler visible-xs-block collapsed" type="button" data-toggle="collapse" data-target="#sidenav">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="bars">
+          <span class="bar-line bar-line-1 out"></span>
+          <span class="bar-line bar-line-2 out"></span>
+          <span class="bar-line bar-line-3 out"></span>
+        </span>
+        <span class="bars bars-x">
+          <span class="bar-line bar-line-4"></span>
+          <span class="bar-line bar-line-5"></span>
+        </span>
+      </button>
+      <button class="navbar-toggler visible-xs-block collapsed" type="button" data-toggle="collapse" data-target="#navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="arrow-up"></span>
+        <span class="ellipsis ellipsis-vertical">
+          <img class="ellipsis-object" width="32" height="32" src="img/0180441436.jpg" alt="Teddy Wilson">
+        </span>
+      </button>
     </div>
+    <div class="navbar-toggleable">
+      <nav id="navbar" class="navbar-collapse collapse">
+        <button class="sidenav-toggler hidden-xs" title="Collapse sidenav ( [ )" aria-expanded="true" type="button">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="bars">
+            <span class="bar-line bar-line-1 out"></span>
+            <span class="bar-line bar-line-2 out"></span>
+            <span class="bar-line bar-line-3 out"></span>
+            <span class="bar-line bar-line-4 in"></span>
+            <span class="bar-line bar-line-5 in"></span>
+            <span class="bar-line bar-line-6 in"></span>
+          </span>
+        </button>
+        
+           
+      </nav>
+    </div>
+  </div>
+</div>
+<div class="layout-main">
+  <div class="layout-sidebar">
+    <div class="layout-sidebar-backdrop"></div>
+    <div class="layout-sidebar-body">
+      <div class="custom-scrollbar">
+        <nav id="sidenav" class="sidenav-collapse collapse">
+          <ul class="sidenav level-1">
+            <li class="sidenav-search">
+              <form class="sidenav-form" action="http://demo.madebytilde.com/">
+                <div class="form-group form-group-sm">
+                  <div class="input-with-icon">
+                    <input class="form-control" type="text" placeholder="Search…">
+                    <span class="icon icon-search input-icon"></span>
+                  </div>
+                </div>
+              </form>
+            </li>
+                
+            <li class="sidenav-item">
+              <a href="widgets.html">
+                <span class="sidenav-icon icon icon-feed"></span>
+                <span class="sidenav-label">Feed</span>
+              </a>
+            </li>
+                
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </div>
+  @RenderBody()
 
-    <environment include="Development">
-        <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-        <script src="~/js/site.js" asp-append-version="true"></script>
-    </environment>
-    <environment exclude="Development">
-        <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
-                asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
-                asp-fallback-test="window.jQuery"
-                crossorigin="anonymous"
-                integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT">
-        </script>
-        <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/bootstrap.min.js"
-                asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
-                asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
-                crossorigin="anonymous"
-                integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
-        </script>
-        <script src="~/js/site.min.js" asp-append-version="true"></script>
-    </environment>
+  <div class="layout-footer">
+    <div class="layout-footer-body">
+      <small class="version">Version 1.4.0</small>
+      <small class="copyright">2017 &copy; Elephant <a href="http://madebytilde.com/">Made by Tilde</a></small>
+    </div>
+  </div>
+</div>
+    
+<script src="/js/vendor.min.js"></script>
+<script src="/js/elephant.min.js"></script>
+<script src="/js/application.min.js"></script>
+<script src="/js/demo.min.js"></script>
+<script src="/js/timeago.js"></script>
 
-    @RenderSection("Scripts", required: false)
+
+@RenderSection("Scripts", required:false)
+ 
 </body>
 </html>
