--- a/src/Web/Views/Shared/_Layout.cshtml
+++ b/src/Web/Views/Shared/_Layout.cshtml
@@ -1,13 +1,11 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-  
-<!-- Mirrored from demo.madebytilde.com/elephant-v1.4.0/theme-3/cards.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 07 Oct 2018 21:53:00 GMT -->
+ 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Cards &middot; Elephant Template &middot; The fastest way to build Modern Admin APPS for any platform, browser, or device.</title>
+  <title>Spot That Fire - Crowdsourcing Platform</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-  <meta name="description" content="Elephant is an admin template that helps you build modern Admin Applications, professionally fast! Built on top of Bootstrap, it includes a large collection of HTML, CSS and JS components that are simple to use and easy to customize.">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,400italic,500,700">
   <link rel="stylesheet" href="/css/vendor.min.css">
   <link rel="stylesheet" href="/css/elephant.min.css">
@@ -26,7 +24,7 @@
   <div class="navbar navbar-default">
     <div class="navbar-header">
       <a class="navbar-brand navbar-brand-center" href="index.html">
-        <h3 class="navbar-brand-logo" styl="color:white">APP</h3>
+        <h4 class="navbar-brand-logo" style="color: white; margin:0">Spot That Fire</h4>
       </a>
       <button class="navbar-toggler visible-xs-block collapsed" type="button" data-toggle="collapse" data-target="#sidenav">
         <span class="sr-only">Toggle navigation</span>
@@ -74,19 +72,10 @@
       <div class="custom-scrollbar">
         <nav id="sidenav" class="sidenav-collapse collapse">
           <ul class="sidenav level-1">
-            <li class="sidenav-search">
-              <form class="sidenav-form" action="http://demo.madebytilde.com/">
-                <div class="form-group form-group-sm">
-                  <div class="input-with-icon">
-                    <input class="form-control" type="text" placeholder="Search…">
-                    <span class="icon icon-search input-icon"></span>
-                  </div>
-                </div>
-              </form>
-            </li>
-                
+            
+            <li class="sidenav-heading">Navigation</li>
             <li class="sidenav-item">
-              <a href="widgets.html">
+              <a href="/">
                 <span class="sidenav-icon icon icon-feed"></span>
                 <span class="sidenav-label">Feed</span>
               </a>
